rpi5/patchmon/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patchmon-frontend
  labels:
    app: patchmon-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patchmon-frontend
  template:
    metadata:
      name: patchmon-frontend
      labels:
        app: patchmon-frontend
    spec:
      containers:
        - name: patchmon-frontend
          image: ghcr.io/patchmon/patchmon-frontend:1.4.0@sha256:858253aab2fe87d820709d16dcc641392605aa07f07c3e2457469fc2d557b464
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
      restartPolicy: Always
