rpi5/patchmon/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patchmon-frontend
spec:
  selector:
    app: patchmon-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
