rpi5/patchmon/frontend/public-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: patchmon-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`patchmon.anshulg.direct`)
      services:
        - name: patchmon-frontend
          port: 80
  tls:
    secretName: patchmon-public-cert-tls
    domains:
      - main: patchmon.anshulg.direct
